SONARGO-780 Test files should only be analyzed by checks that are applicable to test files (#717)
GitOrigin-RevId: 6067e91c134930aed35d7ab10eeec6a9068da2b7